--- a/TipTapTop/LevelConfigurations.plist
+++ b/TipTapTop/LevelConfigurations.plist
@@ -48,5 +48,97 @@
 			<string>Touch.caf</string>
 		</dict>
 	</dict>
+	<key>Level_1</key>
+	<dict>
+		<key>Colors</key>
+		<dict>
+			<key>BackGround</key>
+			<dict>
+				<key>Red</key>
+				<integer>225</integer>
+				<key>Blue</key>
+				<integer>255</integer>
+				<key>Green</key>
+				<integer>255</integer>
+				<key>Alpha</key>
+				<integer>1</integer>
+			</dict>
+		</dict>
+		<key>GamePlay</key>
+		<dict>
+			<key>maxTouchPadsActivated</key>
+			<integer>3</integer>
+			<key>initialSwitchTime</key>
+			<integer>5</integer>
+			<key>finalSwitchTime</key>
+			<integer>3</integer>
+			<key>maxGameTime</key>
+			<integer>60</integer>
+			<key>warningTimeAllocation</key>
+			<real>0.3</real>
+		</dict>
+		<key>Musics</key>
+		<dict>
+			<key>Win</key>
+			<string>Win</string>
+			<key>GameOver</key>
+			<string>GameOver</string>
+		</dict>
+		<key>Sounds</key>
+		<dict>
+			<key>Alert</key>
+			<string>Alert.caf</string>
+			<key>Switch</key>
+			<string>Switch.caf</string>
+			<key>Touch</key>
+			<string>Touch.caf</string>
+		</dict>
+	</dict>
+	<key>Level_2</key>
+	<dict>
+		<key>Colors</key>
+		<dict>
+			<key>BackGround</key>
+			<dict>
+				<key>Red</key>
+				<integer>225</integer>
+				<key>Blue</key>
+				<integer>255</integer>
+				<key>Green</key>
+				<integer>255</integer>
+				<key>Alpha</key>
+				<integer>1</integer>
+			</dict>
+		</dict>
+		<key>GamePlay</key>
+		<dict>
+			<key>maxTouchPadsActivated</key>
+			<integer>4</integer>
+			<key>initialSwitchTime</key>
+			<integer>5</integer>
+			<key>finalSwitchTime</key>
+			<real>1.5</real>
+			<key>maxGameTime</key>
+			<integer>60</integer>
+			<key>warningTimeAllocation</key>
+			<real>0.3</real>
+		</dict>
+		<key>Musics</key>
+		<dict>
+			<key>Win</key>
+			<string>Win</string>
+			<key>GameOver</key>
+			<string>GameOver</string>
+		</dict>
+		<key>Sounds</key>
+		<dict>
+			<key>Alert</key>
+			<string>Alert.caf</string>
+			<key>Switch</key>
+			<string>Switch.caf</string>
+			<key>Touch</key>
+			<string>Touch.caf</string>
+		</dict>
+	</dict>
 </dict>
 </plist>
