manually forced multiple touch enabled + 2 levels with 18 touchpad

--- a/TipTapTop/LevelConfigurations.plist
+++ b/TipTapTop/LevelConfigurations.plist
@@ -48,7 +48,7 @@
 			<string>Touch.caf</string>
 		</dict>
 	</dict>
-	<key>Level_1</key>
+	<key>Vanilla_Easy</key>
 	<dict>
 		<key>Colors</key>
 		<dict>
@@ -94,7 +94,7 @@
 			<string>Touch.caf</string>
 		</dict>
 	</dict>
-	<key>Level_2</key>
+	<key>Vanilla_Hard</key>
 	<dict>
 		<key>Colors</key>
 		<dict>
